[workspace]
members = [
  "crates/*",
  "py-ih-muse",
]
resolver = "2"

default-members = [
  "crates/*",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
homepage = "https://infinitehaiku.com"
repository = "https://github.com/infinitehaiku/ih-muse"
authors = ["Luis Diaz <code.luis.diaz@proton.me"]
license = "MIT"

[workspace.dependencies]
ih-muse = { version = "0.0.3", path = "crates/ih-muse" }
ih-muse-core = { version = "0.0.3", path = "crates/ih-muse-core" }
ih-muse-python = { version = "0.0.3", path = "crates/ih-muse-python" }

pyo3 = "0.22.5"
serde = "1.0.214"
serde_json = "1.0.132"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
module_name_repetitions = "allow"
