[package]
name = "ih-muse-core"
version = { workspace = true }
publish = true
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Infinite Haiku Muse Core"
readme = "../../README.md"

[features]
python = []

[dependencies]
ih-muse-proto = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0.66"
tokio = { workspace = true }