[package]
name = "ih-muse-core"
version = { workspace = true }
publish = true
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Infinite Haiku Muse Core"
readme = "../../README.md"

[features]
python = []

[dependencies]
ih-muse-proto = { workspace = true }

arc-swap = "1.7"
async-trait = { workspace = true }
chrono = { workspace = true }
hashbrown = { workspace = true }
imbl = "3.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "1.0.66"
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }