[package]
name = "ih-muse-python"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
ih-muse-core = { workspace = true, features = ["python"] }
pyo3 = { workspace = true }
