[package]
name = "ih-muse-python"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Python bindings to the Rust code using PyO3"
readme = "../../README.md"

[dependencies]
ih-muse = { workspace = true }

pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
tokio = { workspace = true, features = ["full"] }
