[package]
name = "ih-muse-python"
version = { workspace = true }
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Python bindings to the Rust code using PyO3"
readme = "../../README.md"

[dependencies]
ih-muse = { workspace = true }
ih-muse-core = { workspace = true }
ih-muse-proto = { workspace = true }

pyo3 = { workspace = true }
pyo3-async-runtimes = { version = "0.22", features = ["attributes", "tokio-runtime"] }
# pyo3-asyncio = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
pymethods = []
all = ["pymethods"]
default = ["pymethods"]
