[package]
name = "ih-muse-record"
version = { workspace = true }
publish = true
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Record Muse Api usage for testing purposes"
readme = "../../README.md"

[features]
python = []

[dependencies]
ih-muse-core = { workspace = true }
ih-muse-proto = { workspace = true }

async-trait = { workspace = true }
bincode = "1.3.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
