[package]
name = "ih-muse-test"
version = { workspace = true }
publish = true
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Utilities for testing, including recording and replaying metrics, and mock servers"
readme = "../../README.md"

[features]
python = []

[dependencies]
ih-muse-core = { workspace = true }

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
