[package]
name = "ih-muse"
version = { workspace = true }
publish = true
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Infinite Haiku Muse"
readme = "../../README.md"

[dependencies]
ih-muse-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
